# pattern-matching-exhaustivity-checking

./: .editorconfig  .gitattributes  0.bundle.js  10.bundle.js  11.bundle.js  1133.bundle.js  1149.bundle.js  1182.bundle.js  12.bundle.js  13.bundle.js  1322.bundle.js  14.bundle.js  1470.bundle.js  15.bundle.js  16.bundle.js  17.bundle.js  18.bundle.js  19.bundle.js  195.bundle.js  20.bundle.js  2089.bundle.js  21.bundle.js  2137.bundle.js  2153.bundle.js  2159.bundle.js  22.bundle.js  2280.bundle.js  23.bundle.js  2384.bundle.js  24.bundle.js  2456.bundle.js  2489.bundle.js  249.bundle.js  25.bundle.js  26.bundle.js  27.bundle.js  2755.bundle.js  28.bundle.js  2826.bundle.js  29.bundle.js  (+116 more)
pmxc_analyzer/: Cargo.toml  README.md  dev-build  package.json  pmxc_analyzer.d.ts  pmxc_analyzer.js  pmxc_analyzer_bg.d.ts  pmxc_analyzer_bg.wasm  prod-build
pmxc_analyzer/src/: lib.rs  match_exhaustivity.rs  syntax.rs
pmxc_analyzer/src/match_exhaustivity/: expressions.rs  helpers.rs  patterns.rs  space.rs  space_from_pattern.rs  space_from_ty.rs  space_intersection.rs  space_subtraction.rs  space_to_pattern.rs  ty_system.rs  use_cases.rs
pmxc_analyzer/src/syntax/: ast.rs  ast_gen.rs  element.rs  keyword.rs  node.rs  parse.rs  parse_context.rs  parse_exprs.rs  parse_pats.rs  parse_stmts.rs  pun.rs  text_cursor.rs  token.rs  token_range_map.rs  tokenize.rs  tokenize_context.rs  tokenize_rules.rs  trivia.rs
pmxc_analyzer/tests/: ast.pmxclang  ast_snapshot.txt  check.pmxclang  check_snapshot.txt  parse.pmxclang  parse_snapshot.txt  tokenize.pmxclang  tokenize_snapshot.txt
(+13 files in other folders)
